objects/Extension_Request_Change_Control__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123Rule_Key_Value__c</fullName>
        <defaultValue>"ER_CC"</defaultValue>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Extension_Request_Change_ControlcCMPL12</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_On__c</fullName>
        <label>Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action__c</fullName>
        <label>Workflow Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Status__c</fullName>
        <label>Workflow Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Control__c</fullName>
        <label>Change Control</label>
        <referenceTo>CMPL123QMS__Change_Control__c</referenceTo>
        <relationshipLabel>Extension Requests Change Control</relationshipLabel>
        <relationshipName>Extension_Requests_Change_Control</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current_Due_Date__c</fullName>
        <label>Current Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Due_Date__c</fullName>
        <label>Proposed Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_for_Extension__c</fullName>
        <label>Reason for Extension</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Extension_Requests_Change_Control1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extension_Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Extension Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Extension_Requests_Change_Control</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123Task_Key_Value__c</fullName>
        <label>Task Field Update Key Value</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <label>Extension Request Change Control</label>
    <nameField>
        <displayFormat>ER-CC-{00000}</displayFormat>
        <label>ER-CC No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extension Requests Change Control</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Extension_Request_Cannot_Be_Approved</fullName>
        <active>true</active>
        <description>Extension Request Cannot Be Approved When Change Control is Closed.</description>
        <errorConditionFormula>CONTAINS( Change_Control__r.CMPL123_WF_Status__c, "Closed") &amp;&amp;  CMPL123_WF_Action__c = "Approve"</errorConditionFormula>
        <errorMessage>Extension request cannot be approved for a closed change control.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Proposed_Due_Date_cannot_be_in_the_past</fullName>
        <active>true</active>
        <errorConditionFormula>Proposed_Due_Date__c &lt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Proposed_Due_Date__c</errorDisplayField>
        <errorMessage>Proposed Due Date cannot be in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Change_Owner_or_Change_Coordinator</fullName>
        <active>false</active>
        <description>Only Change Owner or Change Coordinator can modify fields in the initiation, impact assessment, and implementation plan sections after CRB Approval and the WF was sent back to Open</description>
        <errorConditionFormula>(!Includes($User.TWD_Role__c, 'Change Coordinator') &amp;&amp;  $User.Id !=  Change_Control__r.Change_Owner__c  ) &amp;&amp;  Change_Control__r.Only_Change_Owner_or_Change_Coordinator__c</errorConditionFormula>
        <errorMessage>Only Change Owner or Change Coordinator can modify fields in the initiation, impact assessment, and implementation plan sections after CRB Approval and the WF was sent back to Open</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Extension_Requester_restrictions</fullName>
        <active>true</active>
        <description>Only Change Coordinator can update the extension requester field to assign to a different user.</description>
        <errorConditionFormula>( PRIORVALUE( Extension_Requester__c ) != null &amp;&amp;   (!Includes($User.TWD_Role__c, 'Change Coordinator') &amp;&amp; ISCHANGED( Extension_Requester__c  )))</errorConditionFormula>
        <errorMessage>Only Change Coordinator can update the extension requester field to assign to a different user.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>limit_who_can_open_extension_request</fullName>
        <active>true</active>
        <description>Only Change Owner of the change control or a Change Coordinator can create a new extension request for that record.</description>
        <errorConditionFormula>(!Includes($User.TWD_Role__c, 'Change Coordinator') &amp;&amp;  $User.Id !=  Change_Control__r.Change_Owner__c  ) &amp;&amp; ISNEW()</errorConditionFormula>
        <errorMessage>Only Change Owner of the change control or a Change Coordinator can create a new extension request for that record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_Open_a_Extension_Request_when_clos</fullName>
        <active>true</active>
        <description>You cannot create a extension request on a closed Change Control</description>
        <errorConditionFormula>AND (
ISNEW(),
CONTAINS(Change_Control__r.CMPL123_WF_Status__c, "Closed")
)</errorConditionFormula>
        <errorMessage>You cannot create a extension request on a closed Change Control</errorMessage>
    </validationRules>
</CustomObject>